--- a/ImageManipulator/manifest.json
+++ b/ImageManipulator/manifest.json
@@ -4,9 +4,14 @@
 	"version":"1.0",
 	"manifest_version":2,
 	"permissions":[
-		"activeTab"
+		"activeTab",
+		"storage"
 	],
 	"browser_action":{
 		"default_popup":"popup.html"
+	},
+	"background":{
+		"scripts":["backgroundScripts.js"],
+		"persistent":true
 	}
 }
